# piiscrub

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY_REVIEW.md  piiscrub.spec  pyproject.toml
.github/workflows/: ci.yml  release.yml
packaging/macos/: Info.plist  create-app.sh
packaging/windows/: installer.iss
src/piiscrub/: __init__.py  __main__.py  _logging.py  anonymiser.py  audit.py  cli.py  detector.py  extractor.py  mapping.py  models.py  output.py  web.py
tests/: conftest.py  test_anonymiser.py  test_audit.py  test_detector.py  test_extractor.py  test_integration.py  test_mapping.py
