[project]
name = "piiscrub"
version = "0.1.0"
description = "Scrub PII from documents locally before sending to cloud AI — GDPR-safe in seconds."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["gdpr", "pii", "privacy", "nlp", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Topic :: Security",
  "Topic :: Text Processing",
]
dependencies = [
  "click>=8.1",
  "rich>=13.0",
  "presidio-analyzer>=2.2",
  "presidio-anonymizer>=2.2",
  "spacy>=3.7",
  "pymupdf>=1.24",
  "python-docx>=1.1",
  "openpyxl>=3.1",
  "pandas>=2.0",
  "faker>=24.0",
  "sqlalchemy>=2.0",
  "cryptography>=42.0",
  "structlog>=24.0",
  "python-multipart>=0.0.9",
  "fastapi>=0.110",
  "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "fpdf2>=2.7",
]

[project.scripts]
piiscrub = "piiscrub.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/piiscrub"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "fpdf2>=2.7",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
